feat: rebuild api
